Bug 400729 - Missing action button for scheduled transactions in ledger view
Summary: Missing action button for scheduled transactions in ledger view
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.8.2
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-11-06 07:45 UTC by Ralf Habacker
Modified: 2019-08-30 14:03 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.3
Sentry Crash Report:


Attachments
screenshot showing unrelated action buttons (122.88 KB, image/png)
2018-11-06 07:45 UTC, Ralf Habacker
Details
Screenshot showing buttons for scheduled transactions after applying patch (125.53 KB, image/png)
2018-11-06 10:02 UTC, Ralf Habacker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2018-11-06 07:45:38 UTC
Created attachment 116119 [details]
screenshot showing unrelated action buttons

In the ledger view there are buttons for adding and editing transactions as shown in the appended screenshot

STEPS TO REPRODUCE
1. start kmymoney
2. open kmymoney file with scheduled transactions or create a new file with at least one scheduled transaction
3. open ledger view
4. select the scheduled transaction

OBSERVED RESULT
There are no action buttons for the scheduled transaction visible. There are unrelated buttons displayed for regular transactions and it is required to use the context menu to perform a related action. 

EXPECTED RESULT
For scheduled transactions there should be matching action buttons visible in the ledger view.

ADDITIONAL INFORMATION
Having action buttons for scheduled transaction saves user time on adding/editing.
Comment 1 Ralf Habacker 2018-11-06 07:53:01 UTC
see https://phabricator.kde.org/D16698 for a related review request.
Comment 2 Ralf Habacker 2018-11-06 10:02:45 UTC
Created attachment 116120 [details]
Screenshot showing buttons for scheduled transactions after applying patch
Comment 3 Ralf Habacker 2018-11-09 12:43:04 UTC
Git commit 320d67e5cb79974284394d45bfe15f0195be6201 by Ralf Habacker.
Committed on 09/11/2018 at 12:41.
Pushed by habacker into branch '4.8-staging'.

Adding scheduled transactions buttons to the ledger view

Summary:
The ledger view contains buttons for editing transactions such
as New, Edit, Delete, and more. For planned transactions, there
are no similar buttons that simplify editing when selected.

The order of the buttons between regular and scheduled
transactions has been adjusted.
FIXED-IN:4.8.3

Test Plan: compiled and checked on linux

Reviewers: tbaumgart, wojnilowicz

Differential Revision: https://phabricator.kde.org/D16698

M  +17   -1    kmymoney/kmymoney.cpp
M  +8    -1    kmymoney/views/kgloballedgerview.cpp

https://commits.kde.org/kmymoney/320d67e5cb79974284394d45bfe15f0195be6201
Comment 4 Ralf Habacker 2018-11-09 13:40:30 UTC
Git commit 964fc95766b0521cf4ee0d870a419428f2e30664 by Ralf Habacker.
Committed on 09/11/2018 at 13:39.
Pushed by habacker into branch '4.8-staging'.

Adding scheduled transactions buttons to the ledger view

Summary:
The ledger view contains buttons for editing transactions such
as New, Edit, Delete, and more. For planned transactions, there
are no similar buttons that simplify editing when selected.

The order of the buttons between regular and scheduled
transactions has been adjusted.
FIXED-IN:4.8.3

Test Plan: compiled and checked on linux

Reviewers: tbaumgart, wojnilowicz

Differential Revision: https://phabricator.kde.org/D16698

M  +17   -1    kmymoney/kmymoney.cpp
M  +8    -1    kmymoney/views/kgloballedgerview.cpp

https://commits.kde.org/kmymoney/964fc95766b0521cf4ee0d870a419428f2e30664
Comment 5 Ralf Habacker 2018-11-11 18:28:29 UTC
Git commit 84664033008cf8b85cdb0b04bda5cae13741c78e by Ralf Habacker.
Committed on 11/11/2018 at 18:28.
Pushed by habacker into branch '4.8'.

Adding scheduled transactions buttons to the ledger view

The ledger view contains buttons for editing transactions such
as New, Edit, Delete, and more. For planned transactions, there
are no similar buttons that simplify editing when selected.

The order of the buttons between regular and scheduled
transactions has been adjusted.
FIXED-IN:4.8.3
Reviewed By: wojnilowicz
Differential Revision: https://phabricator.kde.org/D16698

M  +17   -1    kmymoney/kmymoney.cpp
M  +8    -1    kmymoney/views/kgloballedgerview.cpp

https://commits.kde.org/kmymoney/84664033008cf8b85cdb0b04bda5cae13741c78e