Adding scheduled transactions buttons to the ledger view

The ledger view contains buttons for editing transactions such
as New, Edit, Delete, and more. For planned transactions, there
are no similar buttons that simplify editing when selected.

The order of the buttons between regular and scheduled
transactions has been adjusted.

BUG:400729
FIXED-IN:4.8.3
Reviewed By: wojnilowicz
Differential Revision: https://phabricator.kde.org/D16698