kmymoney/views/kgloballedgerview.cpp
@@ -276,12 +276,19 @@ KGlobalLedgerView::KGlobalLedgerView(QWidget *parent, const char *name)
   buttonLayout->addWidget(m_buttonbar);
 
   m_buttonbar->addAction(kmymoney->action("transaction_new"));
-  m_buttonbar->addAction(kmymoney->action("transaction_delete"));
   m_buttonbar->addAction(kmymoney->action("transaction_edit"));
+  m_buttonbar->addAction(kmymoney->action("transaction_delete"));
   m_buttonbar->addAction(kmymoney->action("transaction_enter"));
   m_buttonbar->addAction(kmymoney->action("transaction_cancel"));
   m_buttonbar->addAction(kmymoney->action("transaction_accept"));
   m_buttonbar->addAction(kmymoney->action("transaction_match"));
+
+  m_buttonbar->addAction(kmymoney->action("schedule_new"));
+  m_buttonbar->addAction(kmymoney->action("schedule_edit"));
+  m_buttonbar->addAction(kmymoney->action("schedule_delete"));
+  m_buttonbar->addAction(kmymoney->action("schedule_duplicate"));
+  m_buttonbar->addAction(kmymoney->action("schedule_enter"));
+  m_buttonbar->addAction(kmymoney->action("schedule_skip"));
 
   // create the transaction form frame
   m_formFrame = new QFrame(this);
